--- a/src/main/webapp/css/contents.css
+++ b/src/main/webapp/css/contents.css
@@ -289,9 +289,32 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
 .info_space .space_li li{display:inline-block; vertical-align:middle; margin-right:10px; margin-bottom:3px;}
 .info_space .space_li li span{display:inline-block; vertical-align:middle; margin-right:3px; background:#112765; width:20px; height:20px; text-align:center; border-radius:500px; font-size:0.8em; line-height:20px; font-weight:600}
 
+.info_space .photo{position:relative;}
+.info_space .photo ul.space_dot{position:absolute; width:100%; height:100%; left:0; right:0; top:0; bottom:0;}
+.info_space .photo ul.space_dot li{display:block; position:absolute; width:25px; height:25px; line-height:25px; text-align:center; color:#ffffff; font-size:0.8em; font-weight:600; background:#1a0181; border-radius:500px; z-index:1; cursor:pointer}
+.info_space .photo ul.space_dot li:before{content:''; width:10px; height:10px; background:#1a0181; position:absolute; right:50%; margin-right:-5px; bottom:-2px; transform:rotate(-45deg); z-index:0;}
+.info_space .photo ul.space_dot li.dot01{top:44%; right:36%}
+.info_space .photo ul.space_dot li.dot02{top:30%; left:8%}
+.info_space .photo ul.space_dot li.dot02_2{bottom:32%; right:9%}
+.info_space .photo ul.space_dot li.dot03{bottom:24%; left:50%}
+.info_space .photo ul.space_dot li.dot04{top:39%; left:32%}
+.info_space .photo ul.space_dot li.dot05_2{top:54%; left:10%}
+.info_space .photo ul.space_dot li.dot05{bottom:15%; right:13%}
+.info_space .photo ul.space_dot li.dot06{top:55%; right:26%}
+
+.space_pop .popcon{padding:0 !important;}
+.space_pop .popcon:after{content:''; clear:both; display:block;}
+
+.space_pop h1{font-weight:500}
+.space_pop dl{width:94%; margin:0 auto; padding:20px; text-align:left; background:#ffffff; margin-top:-30px; position:relative;}
+.space_pop dl dt{font-weight:600; margin-bottom:10px; font-size:1.2em; color:#1a0182;}
+.space_pop dl dt span{display:inline-block; vertical-align:middle; margin-right:10px; background:#1a0182; width:25px; height:25px; text-align:center; border-radius:500px; font-size:0.8em; font-weight:600; line-height:25px; color:#ffffff}
+.space_pop dl dd{padding-left:15px; position:relative;}
+.space_pop dl dd:before{content:''; width:2px; height:100%; position:absolute; left:0; top:0px; bottom:0; background:#1a0182}
+
 @media only screen and (min-width: 768px) {
     .info_space .space_li li{margin-bottom:0}
-
+	.info_space .photo ul.space_dot li{width:35px; height:35px; line-height:35px; font-size:1em}
 }
 
 @media only screen and (min-width: 1024px) {
@@ -303,6 +326,20 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
     .info_space .photo{margin-left:30%; width:70%}
     .info_space .photo img{display:block; width:100%}
 
+.info_space .photo ul.space_dot li.dot01{top:44%; right:38%}
+.info_space .photo ul.space_dot li.dot02{top:33%; left:10%}
+.info_space .photo ul.space_dot li.dot02_2{bottom:32%; right:9%}
+.info_space .photo ul.space_dot li.dot03{bottom:28%; left:50%}
+.info_space .photo ul.space_dot li.dot04{top:42%; left:32%}
+.info_space .photo ul.space_dot li.dot05_2{top:54%; left:10%}
+.info_space .photo ul.space_dot li.dot05{bottom:17%; right:13%}
+.info_space .photo ul.space_dot li.dot06{top:57%; right:26%}
+
+.space_pop dl{padding:40px; margin-top:-40px}
+.space_pop dl dt{position:absolute; font-size:1.4em}
+.space_pop dl dt span{width:40px; height:40px; line-height:40px;}
+.space_pop dl dd{margin-left:40%; padding-left:50px; font-size:1.1em}
+
 }
 
 @media only screen and (min-width: 1200px) {
@@ -310,6 +347,9 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
     .info_space .photo{margin-left:0%; width:100%}
     .info_space .space_li li span{width:35px; height:35px; line-height:35px;}
     .info_space .space_li li{display:inline-block;}
+
+	.info_space .photo ul.space_dot li{ transition:0.2s}
+	.info_space .photo ul.space_dot li:hover{transform:translateY(-10px); transition:0.2s}
 }
 
 @media only screen and (min-width: 1400px) {
