--- a/src/main/webapp/css/contents.css
+++ b/src/main/webapp/css/contents.css
@@ -836,3 +836,71 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
     .com_introduce2 .com_detail{padding-top:50px; }
 }
 
+
+
+
+.start_list{}
+.start_list .box{
+    border: 1px dashed #1a0182;
+    padding: 20px;
+    margin-bottom: 15px;
+    background: #f9f9fa;
+}
+.start_list .box:nth-child(2){border: 1px dashed #d10000;}
+.start_list .box:nth-child(3){border: 1px dashed #444;}
+.start_list .box .tlt{
+    font-weight: 700;
+    color: #1a0182;
+    font-size: 1.3em;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.start_list .box:nth-child(2) .tlt{color:#d10000}
+.start_list .box:nth-child(3) .tlt{color:#444}
+.start_list .box ul{}
+.start_list .box ul li{
+    font-weight: 400;
+    position:relative;
+    padding-left: 11px;
+    margin-bottom: 10px;
+}
+.start_list .box ul li:after{
+    display:block;
+    clear:both;
+    content:"";
+    width:4px;
+    height:4px;
+    background:#1a0182;
+    position:absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -2px;
+}
+.start_list .box:nth-child(2) li:after{background:#d10000}
+.start_list .box:nth-child(3) li:after{background:#444}
+
+@media all and (min-width:768px) {
+.start_list{
+    display: flex;
+}
+.start_list .box{
+    width: calc(33.3333% - 20px);
+    margin-right: 30px;
+    padding: 30px;
+}
+.start_list .box .tlt{
+    margin-bottom: 22px;
+}
+.start_list .box ul{}
+.start_list .box ul li{
+    margin-bottom: 12px;
+}
+}
+
+@media all and (min-width:1200px) {
+.start_list{}
+.start_list .box{}
+.start_list .box .tlt{}
+.start_list .box ul{}
+.start_list .box ul li{}
+}
