--- a/src/main/webapp/css/contents.css
+++ b/src/main/webapp/css/contents.css
@@ -484,7 +484,7 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
 
 
 @media only screen and (min-width: 768px) {
-    .typebox ul.tabs{text-align:center}
+    .typebox ul.tabs{text-align:center;display: flex;}
     .typebox ul.tabs li{max-width:260px; font-size:1.05em;}
     .typebox ul.tabs li a{padding:15px 0px;}
     .typebox .tabscontent{padding:50px 0px}
@@ -533,6 +533,7 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
 .business_img ul{overflow:hidden}
 .business_img ul li{margin-bottom:20px}
 .business_img ul li img{width:100%}
+.business_img ul li span{display:block; text-align:center; padding-top:5px;}
 
 @media only screen and (min-width: 640px) {
     .business_img ul li{width:48.5%; margin-right:3%; float:left}
@@ -706,45 +707,23 @@ box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.3);*/
 
 
 /*프로그램 이미지 추가*/
-
 .program-img{}
 .program-img ul{}
-.program-img ul:after{
-    display:block; clear:both; content:"";
-}
-.program-img li{
-    margin-bottom: 10px;
-}
+.program-img ul:after{display:block; clear:both; content:"";}
+.program-img li{margin-bottom: 10px;}
 .program-img li:first-child{}
-
-
-
-
 
 @media all and (min-width:768px) {
     .program-img{}
     .program-img ul{}
-    .program-img li{
-        width: 21.8%;
-        float: left;
-        margin: 1%;
-        border: 1px solid #dedede;
-        padding: 0px;
-        margin-top: 0px;
-        margin-bottom: 1%;
-    }
-    .program-img li:first-child{
-        width: 41%;
-    }
+    .program-img li{/*! width: 21.8%; */float: left;margin: 1%;border: 1px solid #dedede;padding: 0px;margin-top: 0px;margin-bottom: 1%;}
+    .program-img li:first-child{/*! width: 41%; */}
 }
 
 @media all and (min-width:1200px) {
     .program-img{}
-    .program-img ul{
-        max-width: 900px;
-        margin: 0 auto;
-    }
-    .program-img li{margin:0.5%;width: 28%;}
+    .program-img ul{max-width: 700px;margin: 0 auto;}
+    .program-img li{/*! margin:0.5%; *//*! width: 28%; */}
 }
 
 
